--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1239,7 +1239,7 @@
     "                               main_text=self.main_text,\n",
     "                               metadatas=self.metadatas,\n",
     "                               process_metas=self.process_metas,\n",
-    "                               sep=metas_sep,\n",
+    "                               sep=self.metas_sep,\n",
     "                               is_batched=self.is_batched)\n",
     "            dset = hf_map_dset(dset,map_func,self.is_batched,self.batch_size,self.num_proc)\n",
     "            if ddict_rest is not None:\n",
@@ -1785,7 +1785,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L562){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L565){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_all_preprocessing\n",
        "\n",
@@ -1798,7 +1798,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L562){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L565){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_all_preprocessing\n",
        "\n",
@@ -1828,7 +1828,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L612){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L615){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_tokenization\n",
        "\n",
@@ -1845,7 +1845,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L612){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L615){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.do_tokenization\n",
        "\n",
@@ -1879,7 +1879,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L643){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L646){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.process_and_tokenize\n",
        "\n",
@@ -1901,7 +1901,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L643){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L646){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.process_and_tokenize\n",
        "\n",
@@ -1947,7 +1947,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L197){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L199){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.from_csv\n",
        "\n",
@@ -1956,7 +1956,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L197){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L199){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.from_csv\n",
        "\n",
@@ -1982,7 +1982,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L206){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L208){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.from_df\n",
        "\n",
@@ -1991,7 +1991,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L206){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/text_main.py#L208){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### TextDataController.from_df\n",
        "\n",
