add compute_metrics default func

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -1034,7 +1034,7 @@
     "            o_dir = './tmp_weights', # Directory to save weights\n",
     "            save_checkpoint=False, # Whether to save weights (checkpoints) to o_dir\n",
     "            hf_report_to='none', # The list of HuggingFace-allowed integrations to report the results and logs to\n",
-    "            compute_metrics=None, # A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` \n",
+    "            compute_metrics=compute_metrics, # A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` \n",
     "            grad_accum_steps=2, # Gradient will be accumulated over gradient_accumulation_steps steps.\n",
     "            tokenizer=None, # Tokenizer (to override one in ```data_store```)\n",
     "            data_collator=None, # Data Collator (to override one in ```data_store```)\n",
@@ -1060,7 +1060,7 @@
     "        if len(set(ddict.keys()) & set(['train','training']))==0:\n",
     "            raise ValueError(\"Missing the following key for DatasetDict: train/training\")\n",
     "        no_valid = len(set(ddict.keys()) & set(['validation','val','valid']))==0\n",
-    "\n",
+    "                    \n",
     "        _compute_metrics = partial(compute_metrics,\n",
     "                                   metric_funcs=metric_funcs,\n",
     "                                   metric_types=metric_types,\n",
@@ -1314,14 +1314,15 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f42772a44c0>], metric_types=[], batch_size=16,\n",
+       ">                           0x7f39b1188550>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
-       ">                           hf_report_to='none', compute_metrics=None,\n",
-       ">                           grad_accum_steps=2, tokenizer=None,\n",
-       ">                           data_collator=None, label_names=None,\n",
-       ">                           head_sizes=None, trainer_class=None)\n",
+       ">                           hf_report_to='none', compute_metrics=<function\n",
+       ">                           compute_metrics>, grad_accum_steps=2,\n",
+       ">                           tokenizer=None, data_collator=None,\n",
+       ">                           label_names=None, head_sizes=None,\n",
+       ">                           trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1338,7 +1339,7 @@
        "| o_dir | str | ./tmp_weights | Directory to save weights |\n",
        "| save_checkpoint | bool | False | Whether to save weights (checkpoints) to o_dir |\n",
        "| hf_report_to | str | none | The list of HuggingFace-allowed integrations to report the results and logs to |\n",
-       "| compute_metrics | NoneType | None | A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` |\n",
+       "| compute_metrics | function | compute_metrics | A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` |\n",
        "| grad_accum_steps | int | 2 | Gradient will be accumulated over gradient_accumulation_steps steps. |\n",
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
@@ -1355,14 +1356,15 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f42772a44c0>], metric_types=[], batch_size=16,\n",
+       ">                           0x7f39b1188550>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
-       ">                           hf_report_to='none', compute_metrics=None,\n",
-       ">                           grad_accum_steps=2, tokenizer=None,\n",
-       ">                           data_collator=None, label_names=None,\n",
-       ">                           head_sizes=None, trainer_class=None)\n",
+       ">                           hf_report_to='none', compute_metrics=<function\n",
+       ">                           compute_metrics>, grad_accum_steps=2,\n",
+       ">                           tokenizer=None, data_collator=None,\n",
+       ">                           label_names=None, head_sizes=None,\n",
+       ">                           trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -1379,7 +1381,7 @@
        "| o_dir | str | ./tmp_weights | Directory to save weights |\n",
        "| save_checkpoint | bool | False | Whether to save weights (checkpoints) to o_dir |\n",
        "| hf_report_to | str | none | The list of HuggingFace-allowed integrations to report the results and logs to |\n",
-       "| compute_metrics | NoneType | None | A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` |\n",
+       "| compute_metrics | function | compute_metrics | A function to compute metric, e.g. `compute_metrics` which utilizes the given ```metric_funcs``` |\n",
        "| grad_accum_steps | int | 2 | Gradient will be accumulated over gradient_accumulation_steps steps. |\n",
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
@@ -1407,7 +1409,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L461){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1419,7 +1421,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L461){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1448,7 +1450,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L482){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1460,7 +1462,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L482){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1489,7 +1491,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L505){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1520,7 +1522,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L505){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
