add layer2concat to dhc concathead

--- a/nbs/05_models.roberta.deep_hierarchical_classifiers.ipynb
+++ b/nbs/05_models.roberta.deep_hierarchical_classifiers.ipynb
@@ -621,7 +621,9 @@
     "        self.body_model = RobertaModel(config, add_pooling_layer=False)\n",
     "        self.root_representation = RobertaConcatHeadDHCRoot(config=config,\n",
     "                                                            classifier_dropout=classifier_dropout,\n",
-    "                                                            last_hidden_size=last_hidden_size)\n",
+    "                                                            last_hidden_size=last_hidden_size,\n",
+    "                                                            layer2concat=layer2concat\n",
+    "                                                           )\n",
     "        \n",
     "        self.linear_L1 = torch.nn.Linear(last_hidden_size, linear_l1_size)\n",
     "        self.linear_L2 = torch.nn.Linear(last_hidden_size, linear_l2_size)\n",
