fix validation leak checking, update version 0.1.8

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1227,7 +1227,7 @@
     "        self.verboseprint('Filtering leaked data out of training set...')\n",
     "        _func = partial(lambda_batch,\n",
     "                        feature=self.main_text,\n",
-    "                        func=lambda x: x.strip().lower() not in val_txt_leaked,\n",
+    "                        func=lambda x: x.strip() not in val_txt_leaked,\n",
     "                        is_batched=self.is_batched)\n",
     "        self.main_ddict['train'] = hf_filter_dset(self.main_ddict['train'],_func,self.is_batched,self.batch_size,self.num_proc)   \n",
     "        self.verboseprint('Done')\n",
