--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -193,7 +193,7 @@
     "def check_text_leaking(trn_txt:list,\n",
     "                       test_txt:list,verbose=True):\n",
     "    verboseprint = print if verbose else lambda *a, **k: None\n",
-    "    test_txt_leaked = {i.strip().lower() for i in trn_txt} & {j.strip().lower() for j in test_txt}\n",
+    "    test_txt_leaked = {i.strip() for i in trn_txt} & {j.strip() for j in test_txt}\n",
     "    len_leaked = len(test_txt_leaked)\n",
     "    verboseprint(f'- Number of rows leaked: {len_leaked}, which is {100*len_leaked/len(trn_txt):.2f}% of training set')\n",
     "    return test_txt_leaked"
