fix issue data collator in model lm

--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -800,12 +800,15 @@
     "                          ddict:DatasetDict|Dataset=None, # A processed and tokenized DatasetDict/Dataset (will override one in ```data_store```)\n",
     "                          ds_type='test', # The split of DatasetDict to predict\n",
     "                          state_name='last_hidden_state', # Name of the (hidden) state to extract\n",
+    "                          data_collator=None, # HuggingFace data collator (will override one in ```data_store```)\n",
     "                          state_idx=0, # The index (or indices) of the state to extract. For `hidden_states`, accept multiple values\n",
     "                          batch_size=16, # GPU batch size\n",
     "                         ):\n",
     "        \n",
     "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
     "        if ddict is None: ddict = check_and_get_attribute(self.data_store,'main_ddict')\n",
+    "        if data_collator is None: data_collator = check_and_get_attribute(self.data_store,'data_collator')\n",
+    "            \n",
     "        if isinstance(ddict,DatasetDict):\n",
     "            if ds_type not in ddict.keys():\n",
     "                raise ValueError(f'{ds_type} is not in the given DatasetDict')\n",
@@ -817,6 +820,7 @@
     "        results = ddict.map(partial(extract_hidden_states,\n",
     "                                 model=self.model,\n",
     "                                 model_input_names = tokenizer.model_input_names,\n",
+    "                                 data_collator=data_collator,\n",
     "                                 state_name=state_name,\n",
     "                                 state_idx=state_idx,\n",
     "                                 device = self.model.device),\n",
