fix issues: add other columns to textdatalm

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1073,7 +1073,7 @@
     "                 batch_size=1024, # CPU batch size\n",
     "                 num_proc=4, # Number of processes for multiprocessing\n",
     "                 cols_to_keep=None, # Columns to keep after all processings\n",
-    "                 verbose=True, # Whether to prdint processing information\n",
+    "                 verbose=True, # Whether to print processing information\n",
     "                ):\n",
     "            \n",
     "        self.main_text = main_text\n",
