--- a/nbs/03_model_lm_roberta_tutorial.ipynb
+++ b/nbs/03_model_lm_roberta_tutorial.ipynb
@@ -55,7 +55,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "comet_ml is installed but `COMET_API_KEY` is not set.\n"
+     ]
+    }
+   ],
    "source": [
     "from that_nlp_library.text_transformation import *\n",
     "from that_nlp_library.text_augmentation import *\n",
@@ -68,15 +76,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "comet_ml is installed but `COMET_API_KEY` is not set.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from underthesea import text_normalize\n",
     "from functools import partial\n",
@@ -121,6 +121,7 @@
     "                         filter_dict={'Review Text': lambda x: x is not None},\n",
     "                         metadatas='Title',\n",
     "                         content_transformations=[text_normalize,str.lower],\n",
+    "                         cols_to_keep=['Clothing ID','Review Text'],\n",
     "                         seed=42,\n",
     "                         verbose=False\n",
     "                        )"
@@ -170,11 +171,11 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "        features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
        "        num_rows: 18112\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "        features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
        "        num_rows: 4529\n",
        "    })\n",
        "})"
@@ -318,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "/home/quan/anaconda3/envs/fastai_backup/lib/python3.10/site-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "You're using a RobertaTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
@@ -330,7 +331,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='1132' max='1132' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1132/1132 04:38, Epoch 4/4]\n",
+       "      [1132/1132 04:55, Epoch 4/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -383,7 +384,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='142' max='142' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [142/142 00:05]\n",
+       "      [142/142 00:06]\n",
        "    </div>\n",
        "    "
       ],
@@ -494,7 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp1 = {'Title':'Flattering',\n",
+    "inp1 = {'Clothing ID':1,\n",
+    "        'Title':'Flattering',\n",
     "        'Review Text': \"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
     "       }"
    ]
@@ -534,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp2 = {'Title':['Flattering','Lovely, but small'],\n",
+    "inp2 = {'Clothing ID':[1,2],\n",
+    "        'Title':['Flattering','Lovely, but small'],\n",
     "        'Review Text': [\"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\",\n",
     "                        \"Love this skirt. The detail is amazing. Runs <mask>, I ordered a 12 I'm usually a 10, but still a little snug\"]\n",
     "       }"
@@ -608,6 +611,7 @@
     "                         filter_dict={'Review Text': lambda x: x is not None},\n",
     "                         metadatas='Title',\n",
     "                         content_transformations=[text_normalize,str.lower],\n",
+    "                         cols_to_keep=['Clothing ID','Review Text'],\n",
     "                         seed=42,\n",
     "                         verbose=False\n",
     "                        )"
@@ -657,11 +661,11 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "        features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
        "        num_rows: 18112\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "        features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
        "        num_rows: 4529\n",
        "    })\n",
        "})"
@@ -800,7 +804,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "/home/quan/anaconda3/envs/fastai_backup/lib/python3.10/site-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n",
       "You're using a RobertaTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
@@ -812,7 +816,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='1132' max='1132' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1132/1132 04:42, Epoch 4/4]\n",
+       "      [1132/1132 05:03, Epoch 4/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -865,7 +869,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='142' max='142' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [142/142 00:05]\n",
+       "      [142/142 00:06]\n",
        "    </div>\n",
        "    "
       ],
@@ -983,7 +987,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp1 = {'Title':'Flattering',\n",
+    "inp1 = {'Clothing ID':1,\n",
+    "        'Title':'Flattering',\n",
     "        'Review Text': \"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
     "       }"
    ]
@@ -1023,7 +1028,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp2 = {'Title':['Flattering','Lovely, but small'],\n",
+    "inp2 = {'Clothing ID':[1,2],\n",
+    "        'Title':['Flattering','Lovely, but small'],\n",
     "        'Review Text': [\"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\",\n",
     "                        \"Love this skirt. The detail is amazing. Runs <mask>, I ordered a 12 I'm usually a 10, but still a little snug\"]\n",
     "       }"
@@ -1136,7 +1142,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp1 = {'Title':'Flattering',\n",
+    "inp1 = {'Clothing ID':1,\n",
+    "        'Title':'Flattering',\n",
     "        'Review Text': \"Love this skirt. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
     "       }"
    ]
@@ -1201,7 +1208,7 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['Title', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask', 'hidden_states'],\n",
+       "    features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask', 'hidden_states'],\n",
        "    num_rows: 1\n",
        "})"
       ]
@@ -1263,7 +1270,7 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['input_ids', 'attention_mask', 'special_tokens_mask', 'hidden_states'],\n",
+       "    features: ['Clothing ID', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask', 'hidden_states'],\n",
        "    num_rows: 4529\n",
        "})"
       ]
