remove datasets and transformers, rerun all nbs

--- a/nbs/01_text_augmentation.ipynb
+++ b/nbs/01_text_augmentation.ipynb
@@ -141,16 +141,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
-      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
-      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
-      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
-      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
       "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
       "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
-      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n"
+      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
+      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
+      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
+      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n",
+      "hội cư dân chung cư sen hồng - chung cư lotus sóng thần thủ đức\n",
+      "hoi cu dan chung cu sen hong - chung cu lotus song than thu duc\n"
      ]
     }
    ],
@@ -262,7 +262,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+      "Some weights of the model checkpoint at vinai/phobert-base were not used when initializing RobertaForMaskedLM: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
+      "- This IS expected if you are initializing RobertaForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
     }
    ],
@@ -307,8 +309,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 814 ms, sys: 17.7 ms, total: 832 ms\n",
-      "Wall time: 78 ms\n"
+      "CPU times: user 751 ms, sys: 17 ms, total: 768 ms\n",
+      "Wall time: 77.2 ms\n"
      ]
     },
     {
