--- a/nbs/02_text_transformation.ipynb
+++ b/nbs/02_text_transformation.ipynb
@@ -129,7 +129,7 @@
     {
      "data": {
       "text/plain": [
-       "'This is a cat . New_York_city . San Francisco . New_York and San Francisco_Bay area . George Bush , Barrack_Obama'"
+       "'This is a_cat . New_York city . San_Francisco . New_York and_San_Francisco Bay area . George Bush , Barrack Obama'"
       ]
      },
      "execution_count": null,
@@ -194,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "'Chàng trai 9X Quảng_Trị khởi_nghiệp từ nấm sò ._Anh ấy không nuôi nấm 😊 . nhưng anh này nuôi . Chị ấy lại không nuôi ? ( ai biết tại_sao 😊_😊 ? ) Rồi ? Rồi_sao ? rồi ? Rồi ủa ... chứ chị ấy nuôi gì , # mộthaiba cũng không rõ =))_😊 . Haha :)_😊 hehe 😊 .'"
+       "'Chàng trai 9X Quảng_Trị khởi_nghiệp từ nấm sò . Anh ấy không nuôi nấm 😊 . nhưng anh này nuôi . Chị ấy lại không nuôi ? ( ai biết tại_sao 😊_😊 ? ) Rồi ? Rồi sao ? rồi ? Rồi ủa ... chứ chị ấy nuôi gì , #_mộthaiba cũng không rõ =))_😊 . Haha :) 😊 hehe 😊 .'"
       ]
      },
      "execution_count": null,
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "'Chàng trai 9X Quảng_Trị khởi_nghiệp từ nấm sò . Anh ấy không nuôi nấm 😊 . nhưng anh này nuôi . Chị ấy lại không nuôi ? ( ai biết tại_sao 😊_😊 ? ) Rồi ? Rồi_sao ? rồi ? Rồi ủa ... chứ chị ấy nuôi gì , # mộthaiba cũng không rõ =))_😊 . Haha :)_😊 hehe 😊 .'"
+       "'Chàng trai 9X Quảng_Trị khởi_nghiệp từ nấm sò . Anh ấy không nuôi nấm 😊 . nhưng anh này nuôi . Chị ấy lại không nuôi ? ( ai biết tại_sao 😊_😊 ? ) Rồi ? Rồi sao ? rồi ? Rồi ủa ... chứ chị ấy nuôi gì , #_mộthaiba cũng không rõ =))_😊 . Haha :) 😊 hehe 😊 .'"
       ]
      },
      "execution_count": null,
