--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -32,15 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "comet_ml is installed but `COMET_API_KEY` is not set.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "from __future__ import annotations\n",
@@ -1314,7 +1306,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f39b1188550>], metric_types=[], batch_size=16,\n",
+       ">                           0x7ff4e4825630>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
@@ -1356,7 +1348,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f39b1188550>], metric_types=[], batch_size=16,\n",
+       ">                           0x7ff4e4825630>], metric_types=[], batch_size=16,\n",
        ">                           val_batch_size=None, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
@@ -1409,7 +1401,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L461){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1421,7 +1413,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L461){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L459){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_text\n",
        "\n",
@@ -1450,7 +1442,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L482){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1462,7 +1454,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L482){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L480){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_raw_dset\n",
        "\n",
@@ -1491,7 +1483,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L505){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
@@ -1522,7 +1514,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L505){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_main.py#L503){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelController.predict_ddict\n",
        "\n",
